Use List.getFirst in RangeBoundValueSerializer